Agrego Middleware y mejoro coherencia en swagger
